--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.0",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
